# filament_measurer

./: .gitignore  README.md  gui.py  main.py  pyproject.toml  requirements.txt  skimage_test.py  test — копия.py  test.py  test2.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/: config.py  engine.py  files.py  gui.py  gui_logic.py  gui_streamlit.py  gui_v3.py  image_processor.py  input_source.py  main.py  mask_processor.py  plot.py  streamlit_gui.py  utils.py  video_processor.py  webacm_test.py
utils/: functions.py
