[tool.poetry]
name = "filament-measurer"
version = "0.1.0"
description = "Plactic filament production control system"
authors = ["KOS <kostanych1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.35.0"
scipy = "^1.13.1"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
av = "^12.1.0"
opencv-python = "^4.10.0.82"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
extend-ignore = ["D203", "E203", "E251", "E266", "E302", "E305", "E401", "E402", "E501", "F401", "F403", "W503"]
exclude = [".git", "__pycache__", "dist"]
max-complexity = 10

[tool.isort]
atomic = true
profile = "black"
line_length = 120
skip_gitignore = true
